--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -234,11 +234,36 @@
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lsu-cu-crd">
                                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                                                 <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keep track of your mood and find insights to improve your life." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwS-7u-Nwi">
+                                                                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="236" id="kUO-JO-Gjx">
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="300"/>
+                                                                            </constraint>
+                                                                        </constraints>
+                                                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                        <variation key="default">
+                                                                            <mask key="constraints">
+                                                                                <exclude reference="kUO-JO-Gjx"/>
+                                                                            </mask>
+                                                                        </variation>
+                                                                        <variation key="heightClass=regular-widthClass=compact">
+                                                                            <mask key="constraints">
+                                                                                <include reference="kUO-JO-Gjx"/>
+                                                                            </mask>
+                                                                        </variation>
+                                                                    </label>
                                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info-logo" translatesAutoresizingMaskIntoConstraints="NO" id="IIY-59-PZc">
                                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="width" constant="150" id="D8g-Mu-zyM"/>
-                                                                            <constraint firstAttribute="height" constant="180" id="hrZ-6g-WON"/>
+                                                                            <constraint firstAttribute="width" constant="150" id="D8g-Mu-zyM">
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="196"/>
+                                                                            </constraint>
+                                                                            <constraint firstAttribute="height" constant="180" id="hrZ-6g-WON">
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="200"/>
+                                                                            </constraint>
                                                                         </constraints>
                                                                         <variation key="default">
                                                                             <mask key="constraints">
@@ -253,40 +278,25 @@
                                                                             </mask>
                                                                         </variation>
                                                                     </imageView>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keep track of your moods and find insights for how to improve your life." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwS-7u-Nwi">
-                                                                        <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                                                        <constraints>
-                                                                            <constraint firstAttribute="width" constant="236" id="kUO-JO-Gjx">
-                                                                                <variation key="heightClass=regular-widthClass=compact" constant="310"/>
-                                                                            </constraint>
-                                                                        </constraints>
-                                                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
-                                                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
-                                                                        <nil key="highlightedColor"/>
-                                                                        <variation key="default">
-                                                                            <mask key="constraints">
-                                                                                <exclude reference="kUO-JO-Gjx"/>
-                                                                            </mask>
-                                                                        </variation>
-                                                                        <variation key="heightClass=regular-widthClass=compact">
-                                                                            <mask key="constraints">
-                                                                                <include reference="kUO-JO-Gjx"/>
-                                                                            </mask>
-                                                                        </variation>
-                                                                    </label>
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="bottom" secondItem="gwS-7u-Nwi" secondAttribute="bottom" constant="8" id="12G-bI-dv5"/>
-                                                                    <constraint firstItem="gwS-7u-Nwi" firstAttribute="top" secondItem="IIY-59-PZc" secondAttribute="bottom" constant="22" id="I5Y-VH-6eW"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="gwS-7u-Nwi" secondAttribute="bottom" constant="8" id="12G-bI-dv5">
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                                                                    </constraint>
+                                                                    <constraint firstItem="gwS-7u-Nwi" firstAttribute="top" secondItem="IIY-59-PZc" secondAttribute="bottom" constant="22" id="I5Y-VH-6eW">
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                                                                    </constraint>
                                                                     <constraint firstAttribute="centerX" secondItem="IIY-59-PZc" secondAttribute="centerX" id="LcX-sZ-Gcf"/>
                                                                     <constraint firstAttribute="centerX" secondItem="gwS-7u-Nwi" secondAttribute="centerX" id="Lsn-ht-qZ7"/>
-                                                                    <constraint firstItem="IIY-59-PZc" firstAttribute="top" secondItem="Lsu-cu-crd" secondAttribute="top" constant="8" id="fhA-7l-FvH"/>
+                                                                    <constraint firstItem="IIY-59-PZc" firstAttribute="top" secondItem="Lsu-cu-crd" secondAttribute="top" constant="8" id="fhA-7l-FvH">
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                                                                    </constraint>
                                                                 </constraints>
                                                                 <variation key="default">
                                                                     <mask key="subviews">
-                                                                        <exclude reference="IIY-59-PZc"/>
                                                                         <exclude reference="gwS-7u-Nwi"/>
+                                                                        <exclude reference="IIY-59-PZc"/>
                                                                     </mask>
                                                                     <mask key="constraints">
                                                                         <exclude reference="12G-bI-dv5"/>
@@ -298,8 +308,8 @@
                                                                 </variation>
                                                                 <variation key="heightClass=regular-widthClass=compact">
                                                                     <mask key="subviews">
-                                                                        <include reference="IIY-59-PZc"/>
                                                                         <include reference="gwS-7u-Nwi"/>
+                                                                        <include reference="IIY-59-PZc"/>
                                                                     </mask>
                                                                     <mask key="constraints">
                                                                         <include reference="12G-bI-dv5"/>
@@ -3409,7 +3419,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
     </scenes>
     <resources>
         <image name="cancel" width="18" height="18"/>
-        <image name="info-logo" width="151" height="180"/>
+        <image name="info-logo" width="197" height="200"/>
         <image name="onboarding_02" width="192" height="322"/>
         <image name="onboarding_03" width="192" height="322"/>
         <image name="onboarding_04" width="320" height="256"/>
