--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -180,15 +180,15 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eVm-BZ-8Aj" userLabel="Title Screen">
                                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahU-R9-r3u">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahU-R9-r3u" customClass="OnboardingButton" customModule="HowAmIDoing" customModuleProvider="target">
                                                         <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="zC1-fF-EfJ"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
                                                         <state key="normal" title="I’m an existing user">
-                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <color key="titleColor" red="0.29005160927772522" green="0.46482408046722412" blue="0.98826318979263306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         </state>
                                                         <variation key="default">
                                                             <mask key="constraints">
@@ -204,16 +204,24 @@
                                                             <segue destination="Lgr-ll-z7b" kind="presentation" id="bHI-fo-gKE"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="piy-OA-wsK">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="piy-OA-wsK" customClass="OnboardingButton" customModule="HowAmIDoing" customModuleProvider="target">
                                                         <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="zSl-PG-NEj"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
                                                         <state key="normal" title="I'm a new user">
-                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <color key="titleColor" red="0.29005160927772522" green="0.46482408046722412" blue="0.98826318979263306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         </state>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="6"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                                <real key="value" value="2"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
                                                         <variation key="default">
                                                             <mask key="constraints">
                                                                 <exclude reference="zSl-PG-NEj"/>
@@ -242,7 +250,7 @@
                                                                             </constraint>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
-                                                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
+                                                                        <color key="textColor" red="0.29005160927772522" green="0.46482408046722412" blue="0.98826318979263306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <nil key="highlightedColor"/>
                                                                         <variation key="default">
                                                                             <mask key="constraints">
@@ -259,10 +267,10 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="150" id="D8g-Mu-zyM">
-                                                                                <variation key="heightClass=regular-widthClass=compact" constant="196"/>
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="164"/>
                                                                             </constraint>
                                                                             <constraint firstAttribute="height" constant="180" id="hrZ-6g-WON">
-                                                                                <variation key="heightClass=regular-widthClass=compact" constant="200"/>
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="186"/>
                                                                             </constraint>
                                                                         </constraints>
                                                                         <variation key="default">
@@ -285,7 +293,7 @@
                                                                         <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                                                                     </constraint>
                                                                     <constraint firstItem="gwS-7u-Nwi" firstAttribute="top" secondItem="IIY-59-PZc" secondAttribute="bottom" constant="22" id="I5Y-VH-6eW">
-                                                                        <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="24"/>
                                                                     </constraint>
                                                                     <constraint firstAttribute="centerX" secondItem="IIY-59-PZc" secondAttribute="centerX" id="LcX-sZ-Gcf"/>
                                                                     <constraint firstAttribute="centerX" secondItem="gwS-7u-Nwi" secondAttribute="centerX" id="Lsn-ht-qZ7"/>
@@ -349,7 +357,7 @@
                                                         </variation>
                                                     </view>
                                                 </subviews>
-                                                <color key="backgroundColor" red="0.29005160927772522" green="0.46482408046722412" blue="0.98826318979263306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" red="0.90980392156862744" green="0.92549019607843142" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="UD3-0T-O21" secondAttribute="trailing" id="B4b-RN-acW"/>
                                                     <constraint firstAttribute="bottom" secondItem="ahU-R9-r3u" secondAttribute="bottom" constant="26" id="Lnp-RU-Ayg"/>
@@ -3419,7 +3427,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
     </scenes>
     <resources>
         <image name="cancel" width="18" height="18"/>
-        <image name="info-logo" width="197" height="200"/>
+        <image name="info-logo" width="165" height="186"/>
         <image name="onboarding_02" width="192" height="322"/>
         <image name="onboarding_03" width="192" height="322"/>
         <image name="onboarding_04" width="320" height="256"/>
